# Espruino_ESPIDF_V5

./: Makefile  README.md  sdkconfig
boards/: BANGLEJS2.py  ESP32_IDF5.py
main/: CMakeLists.txt
make/family/: ESP32_IDF5.make
make/targets/: ESP32_IDF5.make
scripts/: build_platform_config.py  provision.sh
targets/esp32/IDF5/: README.md
targets/esp32/IDF5/docs/: 01_ConfigAndBuildFiles.md
