idf_component_register(
						 SRCS
						"/home/simon/Espruino/EspruinoIDF5/Espruino/src/jslex.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsflags.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsvar.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsvariterator.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsutils.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsnative.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsparse.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/gen/jswrapper.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsflash.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jspin.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsinteractive.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsdevices.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jstimer.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsi2c.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsserial.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jsspi.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jshardware_common.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/libs/compression/heatshrink/heatshrink_encoder.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/libs/compression/heatshrink/heatshrink_decoder.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/libs/compression/compress_heatshrink.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/main.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardware.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardwareESP32.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardwareI2c.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardwareSpi.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardwareSpi.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardwareUart.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardwareAnalog.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardwarePWM.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/rtosutil.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/jshardwarePulse.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/gen/jspininfo.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_array.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_arraybuffer.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_dataview.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_date.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_error.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_functions.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_json.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_number.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_object.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_regexp.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_string.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_modules.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_math.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_espruino.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_flash.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_interactive.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_io.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_pin.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_pipe.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_process.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_onewire.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_promise.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_serial.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_storage.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_spi_i2c.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_stepper.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_stream.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/jswrap_waveform.c"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/libs/compression/jswrap_heatshrink.c"
						
						 INCLUDE_DIRS
						"/home/simon/Espruino/EspruinoIDF5/Espruino/"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/src/"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/libs/compression/"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/libs/compression/heatshrink/"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/libs/network/esp32/"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/targets/esp32/IDF5/"
						 "/home/simon/Espruino/EspruinoIDF5/Espruino/gen/"
						
						 )

target_compile_options(${COMPONENT_TARGET} PUBLIC -DESP_IDF_VERSION_MAJOR=4)
target_compile_options(${COMPONENT_TARGET} PUBLIC -DGIT_COMMIT=5011a4feb -DBUILDNUMBER="139" -DESP32_IDF5 -DESP_PLATFORM -DESP32=1 -DESP_STACK_SIZE=25000 -DJSVAR_MALLOC -DUSE_FONT_6X8 -DDEBUG -DUSE_DEBUGGER -DUSE_TAB_COMPLETE -DUSE_HEATSHRINK -DESP32 -DESPR_DEFINES_ON_COMMANDLINE -DEMBEDDED)
target_compile_options(${COMPONENT_TARGET} PUBLIC -Og -fno-strict-aliasing -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -fgnu89-inline  -nostdlib -MMD -MP -Wno-enum-compare)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-pointer-sign)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-implicit-int)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-maybe-uninitialized)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-return-type)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-switch)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unused-variable)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unused-function)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-unused-but-set-variable)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-cast-function-type)
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-format)
